# job-search-buddy

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  cv.example.md  preferences.example.json  pyproject.toml  requirements.txt
jobscraper/: main.py  sources_loader.py
jobscraper/src/: agent_runner.py  airtable_client.py  career_sites_scraper.py  cleanup_duplicates.py  config.py  environment_setup.py  job_boards_scraper.py  main.py  mcp_utils.py  prompts.py  pydantic_sandbox.py  run_scoring.py  sandbox_runner.py  scoring.py  scrape_runner.py  server_manager.py
